k8s/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-namespace
  namespace: iot
spec:
  podSelector:
    matchLabels: {app: redis}
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: {}
      ports:
        - {port: 6379, protocol: TCP}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: collector-allow-namespace
  namespace: iot
spec:
  podSelector:
    matchLabels: {app: otel-collector}
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: {}
      ports:
        - {port: 4317, protocol: TCP}
        - {port: 4318, protocol: TCP}
